Agrega nav superior

--- a/index.html
+++ b/index.html
@@ -11,9 +11,31 @@
     <header>
         <nav class="menu" id="menu">
 
+            <div class="container container-button-menu">
+                <button id="btn-menu-bar" class="btn-menu-bar"><i class="fas fa-bars"></i></button>
+                <button id="btn-menu-exit" class="btn-menu-exit"><i class="fas fa-times"></i></button>
+            </div>
+
+            <div class="container container-links-nav">
+                <div class="btn-categorias" id="btn-categorias">
+                    <p>Todas las <span>Categorias</span></p>
+                    <i id="arrow-botton" class="fas fa-caret-down"></i>
+                </div>
+
+                <div class="links">
+                    <a href="#">cuenta</a>
+                    <a href="#">cuenta</a>
+                    <a href="#">cuenta</a>
+                    <a href="#">cuenta</a>
+                </div>
+            </div>
+
         </nav>
     </header>
-    <main class="container"></main>
+    <main class="container">
+        <section id="slider"></section>
+    </main>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/js/all.min.js"></script> 
     <script src="scripts/script.js"></script>
 </body>
