Agrego nav superior : Home

--- a/index.html
+++ b/index.html
@@ -9,6 +9,43 @@
 </head>
 <body>
     <header>
+        <!---------------NAV LOGO, SEARCH Y LOGIN---------------->
+        <nav class="menu-sup " id="menu-sup">
+            <div class="container">
+                <div class="container-search">
+                    <form action="#" autocomplete="off">
+                        <button type="submit"><i id="search-icon" class="fas fa-search"></i></button>
+                        <input type="text" name="search" id="search" placeholder="Buscar" >
+                    </form>
+                
+                </div>
+                <div class="container-logo">
+                    <h1>MI LOGO</h1>
+                </div>
+                <div class="container-singin-cart">
+                    <div class="singin">
+                        <i id="singin-icon" class="fas fa-sign-in-alt"></i>
+                        <span>Ingresa</span>
+                    </div>
+                    <div class="favorite">
+                        <i id="favorite-icon" class="fas fa-heart"></i>
+                        <span>Favorito</span>
+                    </div>
+                    <div class="cart">
+                        <i id="cart-icon" class="fas fa-shopping-cart"></i>
+                        <span>Carrito</span>
+                        <div class="cont-cart">
+                            <span id="cant-cart">1</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </nav>
+
+
+
+        <!---------------NAV MENU---------------->
 
         <nav class="menu" id="menu">
 
@@ -24,10 +61,11 @@
                 </div>
 
                 <div class="links">
-                    <a href="#">cuenta</a>
-                    <a href="#">cuenta</a>
-                    <a href="#">cuenta</a>
-                    <a href="#">cuenta</a>
+                    <a href="#">Ofertas</a>
+                    <a href="#">Lo mas buscado</a>
+                    <a href="#">Recomendado</a>
+                    <a href="#">Vender</a>
+                    <a href="#">Ayuda</a>
                 </div>
             </div>
 
@@ -289,9 +327,10 @@
 
         <section id="slider"></section>
 
-    </main>
+</main>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/js/all.min.js"></script> 
     <script src="scripts/script.js"></script>
+
 </body>
 </html>
