Agraga responsive al nav : home

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <!---------------NAV LOGO, SEARCH Y LOGIN---------------->
         <nav class="menu-sup " id="menu-sup">
-            <div class="container">
+            <div class="container container-nav-menu.sup">
                 <div class="container-search">
                     <form action="#" autocomplete="off">
                         <button type="submit"><i id="search-icon" class="fas fa-search"></i></button>
@@ -25,15 +25,15 @@
                 <div class="container-singin-cart">
                     <div class="singin">
                         <i id="singin-icon" class="fas fa-sign-in-alt"></i>
-                        <span>Ingresa</span>
+                        <span class="title-icon">Ingresa</span>
                     </div>
                     <div class="favorite">
                         <i id="favorite-icon" class="fas fa-heart"></i>
-                        <span>Favorito</span>
+                        <span class="title-icon">Favorito</span>
                     </div>
                     <div class="cart">
                         <i id="cart-icon" class="fas fa-shopping-cart"></i>
-                        <span>Carrito</span>
+                        <span class="title-icon">Carrito</span>
                         <div class="cont-cart">
                             <span id="cant-cart">1</span>
                         </div>
@@ -83,8 +83,8 @@
                         <a href="#" data-categoria="salud">Salud <i class="fas fa-angle-right btn-arrow-left"></i></a>
                         <a href="#" data-categoria="alimentos">Alimentos <i class="fas fa-angle-right btn-arrow-left"></i></a>
                     </div>
-                    <div class="container-subcategorias">
-                        <div class="subcategorias " data-subcategoria="tecnologia">
+                    <div class="container-subcategorias ">
+                        <div class="subcategorias active" data-subcategoria="tecnologia">
                             
                             <div class="link-subcategoria">
                                 <button class="btn-back"><i id="btn-back" class="fas fa-arrow-left"></i> Atras</button>
@@ -136,16 +136,16 @@
                             </div>
                             <div class="galeria-subcategoria">
                                 <a href="#">
-                                    <img src="img/nav/galeria/tecnologia-1.jpg" alt="">
-                                </a>
-                                <a href="#">
-                                    <img src="img/nav/galeria/tecnologia-2.jpg" alt="">
+                                    <img src="img/nav/galeria/tecnologia-4.jpg" alt="">
                                 </a>
                                 <a href="#">
                                     <img src="img/nav/galeria/tecnologia-3.jpg" alt="">
                                 </a>
                                 <a href="#">
-                                    <img src="img/nav/galeria/tecnologia-4.jpg" alt="">
+                                    <img src="img/nav/galeria/tecnologia-2.jpg" alt="">
+                                </a>
+                                <a href="#">
+                                    <img src="img/nav/galeria/tecnologia-1.jpg" alt="">
                                 </a>
                             </div>
 
