Agrega slider : Home

--- a/index.html
+++ b/index.html
@@ -323,9 +323,12 @@
         
     </header>
 
- <main class="container">
+ <main class="">
 
-        <section id="slider"></section>
+    <!---------------SLIDER---------------->
+    <section id="slider">
+        <img name="slider" alt="">
+    </section>
 
 </main>
 
