Agrega sign in : sign-in.html

--- a/home.html
+++ b/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -35,25 +35,32 @@
                 </div>
 
                 <div class="container-logo">
-                    <h1><a href="home.html">MI LOGO</a></h1>
+                    <a href="home.html">
+                        <img src="img/logo.png" alt="logo">
+                    </<a>
                 </div>
 
                 <div class="container-singin-cart">
 
                     <div class="singin">
-                        <i id="singin-icon" class="fas fa-sign-in-alt"></i>
-                        <span class="title-icon">Ingresa</span>
+                        <a href="sign-in.html">
+                            <i id="singin-icon" class="fas fa-sign-in-alt"></i>
+                            <span class="title-icon">Ingresa</span>
+                        </a>
                     </div>
 
                     <div class="favorite">
-                        <i id="favorite-icon" class="fas fa-heart"></i>
-                        <span class="title-icon">Favorito</span>
+                        <a href="#">
+                            <i id="favorite-icon" class="fas fa-heart"></i>
+                            <span class="title-icon">Favorito</span>
+                        </a>
                     </div>
 
                     <div class="cart">
-
-                        <i id="cart-icon" class="fas fa-shopping-cart"></i>
-                        <span class="title-icon">Carrito</span>
+                        <a href="#">
+                            <i id="cart-icon" class="fas fa-shopping-cart"></i>
+                            <span class="title-icon">Carrito</span>
+                        </a>
 
                         <div class="cont-cart">
                             <span id="cant-cart">1</span>
