Agrega sign up : sign-up.html

--- a/sign-in.html
+++ b/sign-in.html
@@ -53,15 +53,14 @@
 
                         <!-- <p class="advertencia">La conbinación ingresada de email y contraseña no es válida </p> -->
                         <button id="btn-sign-in">Ingresar</button>
-                        <p class="advertencia">Al continuar, aceptas las <a href="#">Condiciones de uso</a> y el <a
-                                href="#">Aviso de privacidad</a> de Dazt.</p>
+                        <p class="advertencia"> Al ingresar, acepto los<a href="#"> Términos y condiciones</a> y las <a href="">Políticas de privacidad</a>  de Dazt.</p>
 
                     </div>
 
                 </form>
                 <div class="sign-up">
                     <p>¿No tienes una cuenta en Dazt?</p>
-                    <button id="btn-sign-up">Crear cuenta</button>
+                    <button id="btn-sign-up" onclick="window.location.href='sign-up.html'">Crear cuenta</button>
 
                 </div>
             </section>
