Agrega margin al footer: index.html

--- a/sign-in.html
+++ b/sign-in.html
@@ -15,7 +15,6 @@
 
     <main class="main">
         <section class="container-form container">
-            <section id="login">
                 <div class="logo">
                     <img src="img/logo.png" alt="logo">
                 </div>
@@ -63,13 +62,23 @@
                     <button id="btn-sign-up" onclick="window.location.href='sign-up.html'">Crear cuenta</button>
 
                 </div>
-            </section>
+        
 
         </section>
 
     </main>
 
     <footer>
+            <div class="footer-sign-in">
+                    <ul>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Contacto</a></li>
+                        <li><a href="#">F.Q.A</a></li>
+                        <li><a href="#">Empresa</a></li>
+                        <li><a href="#">Devoluciones y reenplazo</a></li>
+                        <li><a href="#">Politica y Pivacidad </a> </li>
+                    </ul>
+                </div>
         <div class="copy">
             <p>Copyright © <strong><a href="#">David fabian</a> </strong>2019</p>
         </div>
