--- a/sign-up.html
+++ b/sign-up.html
@@ -7,6 +7,7 @@
     <title>Crear cuenta en Dazt</title>
     <link rel="stylesheet" href="styles/header-footer.css">
     <link rel="stylesheet" href="styles/sign-up.css">
+    <link rel="stylesheet" href="styles/mediaqueries.css">
 </head>
 <body>
 
