Ajusta margin de footer : home.html

--- a/faq.html
+++ b/faq.html
@@ -670,48 +670,48 @@
     </main>
     <footer>
 
-        <div class="footer-container container">
+            <div class="footer-container container">
 
-            <div class="footer-menu">
+                <div class="footer-menu">
 
-                <h4 class="footer-title">menu</h4>
+                    <h4 class="footer-title">menu</h4>
 
-                <ul>
+                    <ul>
 
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Contacto</a></li>
-                    <li><a href="#">F.Q.A</a></li>
-                    <li><a href="#">Empresa</a></li>
-                    <li><a href="#">Devoluciones <br>y reenplazo</a></li>
-                    <li><a href="#"> Politica y<br>Pivacidad </a> </li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="contact.html">Contacto</a></li>
+                        <li><a href="faq.html">F.Q.A</a></li>
+                        <li><a href="#">Empresa</a></li>
+                        <li><a href="#">Devoluciones <br>y reenplazo</a></li>
+                        <li><a href="#"> Politica y<br>Pivacidad </a> </li>
 
-                </ul>
+                    </ul>
+                </div>
+                <div class="footer-newsletter">
+
+                    <label for="newsletter">
+                        <h4 class="footer-title">Newsletter</h4>
+                    </label>
+                    <input type="text" placeholder="Dejanos tu email">
+
+                </div>
+
+                <div class="footer-social">
+
+                    <h4 class="footer-title">Redes Sociales</h4>
+                    <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
+                    <li><a href="#"><i class="fab fa-twitter-square"></i></a></li>
+                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+
+                </div>
+
             </div>
-            <div class="footer-newsletter">
 
-                <label for="newsletter">
-                    <h4 class="footer-title">Newsletter</h4>
-                </label>
-                <input type="text" placeholder="Dejanos tu email">
-
+            <div class="copy">
+                <p>Copyright © <strong><a href="#">David fabian</a> </strong>2019</p>
             </div>
 
-            <div class="footer-social">
-
-                <h4 class="footer-title">Redes Sociales</h4>
-                <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
-                <li><a href="#"><i class="fab fa-twitter-square"></i></a></li>
-                <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-
-            </div>
-
-        </div>
-
-        <div class="copy">
-            <p>Copyright © <strong><a href="#">David fabian</a> </strong>2019</p>
-        </div>
-
-    </footer>
+        </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/js/all.min.js"></script>
     <script src="scripts/script-header.js"></script>
