--- a/home.html
+++ b/home.html
@@ -440,7 +440,7 @@
             <section class="oferta">
 
                 <article class="item">
-                    <a href="#">
+                    <a href="product.html">
 
                         <figure class="item-img">
                             <img src="img/item/item.jpg" alt="item">
@@ -470,7 +470,7 @@
 
                 <article class="item oculta">
 
-                    <a href="#">
+                    <a href="product.html">
 
                         <figure class="item-img">
                             <img src="img/item/item.jpg" alt="item">
@@ -509,7 +509,7 @@
 
                 <article class="item">
 
-                    <a href="#">
+                    <a href="product.html">
 
                         <figure class="item-img">
                             <img src="img/item/item.jpg" alt="item">
@@ -541,7 +541,7 @@
 
                 <article class="item oculta">
 
-                    <a href="#">
+                    <a href="product.html">
 
                         <figure class="item-img">
                             <img src="img/item/item.jpg" alt="item">
@@ -579,7 +579,7 @@
             <section class="smartphone">
 
                 <article class="item">
-                    <a href="#">
+                    <a href="product.html">
 
                         <figure class="item-img">
                             <img src="img/item/item.jpg" alt="item">
@@ -610,7 +610,7 @@
                 </article>
 
                 <article class="item">
-                    <a href="#">
+                    <a href="product.html">
 
                         <figure class="item-img">
                             <img src="img/item/item.jpg" alt="item">
@@ -640,38 +640,7 @@
                 </article>
 
                 <article class="item oculta">
-                    <a href="#">
-
-                        <figure class="item-img">
-                            <img src="img/item/item.jpg" alt="item">
-                        </figure>
-
-                        <div class="item-desc">
-
-                            <span class="price">$299</span>
-                            <span class="price-after">$500</span>
-                            <h5 class="item-title">Apple Macbook Pro 13 Core I5 8gb</h5>
-
-                        </div>
-
-                    </a>
-
-                    <div class="item-fav">
-                        <i class="far fa-heart"></i>
-                    </div>
-
-                    <div class="item-cart">
-                        <i class="fas fa-cart-plus"></i>
-                    </div>
-
-                    <div class="item-button">
-                        Comprar ya!
-                    </div>
-
-                </article>
-
-                <article class="item oculta">
-                    <a href="#">
+                    <a href="product.html">
 
                         <figure class="item-img">
                             <img src="img/item/item.jpg" alt="item">
@@ -702,7 +671,38 @@
                 </article>
 
                 <article class="item oculta">
-                    <a href="#">
+                    <a href="product.html">
+
+                        <figure class="item-img">
+                            <img src="img/item/item.jpg" alt="item">
+                        </figure>
+
+                        <div class="item-desc">
+
+                            <span class="price">$299</span>
+                            <span class="price-after">$500</span>
+                            <h5 class="item-title">Apple Macbook Pro 13 Core I5 8gb</h5>
+
+                        </div>
+
+                    </a>
+
+                    <div class="item-fav">
+                        <i class="far fa-heart"></i>
+                    </div>
+
+                    <div class="item-cart">
+                        <i class="fas fa-cart-plus"></i>
+                    </div>
+
+                    <div class="item-button">
+                        Comprar ya!
+                    </div>
+
+                </article>
+
+                <article class="item oculta">
+                    <a href="product.html">
 
                         <figure class="item-img">
                             <img src="img/item/item.jpg" alt="item">
@@ -739,7 +739,7 @@
 
             <section class="reloj">
                 <article class="item">
-                    <a href="#">
+                    <a href="product.html">
 
                         <figure class="item-img">
                             <img src="img/item/item.jpg" alt="item">
@@ -770,7 +770,7 @@
                 </article>
 
                 <article class="item">
-                    <a href="#">
+                    <a href="product.html">
 
                         <figure class="item-img">
                             <img src="img/item/item.jpg" alt="item">
@@ -802,7 +802,7 @@
 
                 <article class="item oculta">
 
-                    <a href="#">
+                    <a href="product.html">
 
                         <figure class="item-img">
                             <img src="img/item/item.jpg" alt="item">
@@ -831,7 +831,7 @@
                 </article>
 
                 <article class="item oculta">
-                    <a href="#">
+                    <a href="product.html">
 
                         <figure class="item-img">
                             <img src="img/item/item.jpg" alt="item">
@@ -860,7 +860,7 @@
 
                 </article>
                 <article class="item oculta">
-                    <a href="#">
+                    <a href="product.html">
 
                         <figure class="item-img">
                             <img src="img/item/item.jpg" alt="item">
