Corrige responsive : home.html

--- a/contact.html
+++ b/contact.html
@@ -439,7 +439,7 @@
                 </form>
         
                 <div class="ubicacion"> 
-                    <h2>Nos puedes en concontrar en:</h2>
+                    <h2>Nos puedes encontrar en:</h2>
                     <p>Lima 1111</p>
                     <p>CABA - Argentina</p>
                     <div class="mapa">
