--- a/home.html
+++ b/home.html
@@ -609,7 +609,7 @@
 
                 </article>
 
-                <article class="item">
+                <article class="item oculta2">
                     <a href="product.html">
 
                         <figure class="item-img">
@@ -769,7 +769,7 @@
 
                 </article>
 
-                <article class="item">
+                <article class="item oculta2">
                     <a href="product.html">
 
                         <figure class="item-img">
