--- a/perfil.html
+++ b/perfil.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Dazt</title>
+    <title>Mi Cuenta</title>
     <link rel="shortcut icon" href="favicon/favicon.ico">
     <link rel="icon" type="image/gif" href="favicon/animated_favicon1.gif">
     <link rel="stylesheet" href="styles/header-footer.css">
