--- a/home.html
+++ b/home.html
@@ -8,10 +8,12 @@
     <title>Dazt</title>
     <link rel="shortcut icon" href="favicon/favicon.ico">
     <link rel="icon" type="image/gif" href="favicon/animated_favicon1.gif">
-    <link rel="stylesheet" href="styles/header-footer.css">
+    <!-- <link rel="stylesheet" href="styles/header-footer.css"> -->
     <link rel="stylesheet" href="styles/home.css">
     <link rel="stylesheet" href="styles/item.css">
-    <link rel="stylesheet" href="styles/mediaqueries.css">
+    <link rel="stylesheet" href="styles/header.css">
+    <link rel="stylesheet" href="styles/footer.css">
+
 
 </head>
 
@@ -971,7 +973,7 @@
 
                 <div class="footer-menu">
 
-                    <h4 class="footer-title">menu</h4>
+                    <h4 class="footer-title">Menu</h4>
 
                     <ul>
 
@@ -986,9 +988,9 @@
                 </div>
                 <div class="footer-newsletter">
 
-                    <label for="newsletter">
-                        <h4 class="footer-title">Newsletter</h4>
-                    </label>
+
+                    <h4 class="footer-title">Newsletter</h4>
+
                     <input type="text" placeholder="Dejanos tu email">
 
                 </div>
